--- a/events.html
+++ b/events.html
@@ -78,9 +78,9 @@
                         aria-expanded="false">Events <span class="sr-only">(current)</span></a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="#market">Summer Pop-up Markets</a>
                         <a class="dropdown-item" href="#fttdinner">Summer Farm-to-Table Dinners</a>
                         <a class="dropdown-item" href="#fallfest">Fall Leaf Festival</a>
-                        <a class="dropdown-item" href="#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -182,14 +182,31 @@
         <div class="c3"><img class="plantsale sqr" src="../img/plantsalething.jpg"></div>
     </div>
 
-    <div class="row2 tall_big" id="fttdinner">
+    <div class="row2 tall_big" id="market">
 
-        <div class="c1"><img src="../img/dinnerbarnrc.jpg"></div>
+        <div class="c1"><img src="../img/market.jpg"></div>
         <div class="c2 centered">
             <div class="secthead inside-secthead inside-secthead-right" align="center">
+                summer pop-up markets
+            </div>
+            <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm have
+                been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
+                pop-up markets from time to time when a crop blesses us with more production than we know what to do
+                with! Our tomato and pesto pop-ups have been extremely popular in previous years.<br></br>
+                Do our Summer Pop-Up Markets sound fun to you? Submit your contact information to receive our quarterly
+                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
+                forget to follow us on social media, too!
+            </p>
+        </div>
+    </div>
+
+    <div class="row3 tall_big" id="fttdinner">
+        <div class="c3"><img class="fttpic" src="../img/dinnerbarnrc.jpg"></div>
+        <div class="c1">
+            <div class="secthead inside-secthead inside-secthead-left" align="center">
                 summer farm-to-table dinners
             </div>
-            <p class="just-txt body-text row-text row-text-right">Farm-to-table dinners have been held here in our barns
+            <p class="just-txt body-text row-text row-text-left">Farm-to-table dinners have been held here in our barns
                 since 2016 to rave
                 reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
                 local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
@@ -205,13 +222,14 @@
         </div>
     </div>
 
-    <div class="row3 tall_big" id="fallfest">
-        <div class="c3"><img class="fttpic" src="../img/leaffestrc.jpg"></div>
-        <div class="c1">
-            <div class="secthead inside-secthead inside-secthead-left" align="center">
+    <div class="row2 tall_big" id="fallfest">
+
+        <div class="c1"><img src="../img/leaffestrc.jpg"></div>
+        <div class="c2 centered">
+            <div class="secthead inside-secthead inside-secthead-right" align="center">
                 fall leaf festival
             </div>
-            <p class="just-txt body-text row-text row-text-left">Did you know that yard waste, like leaves and
+            <p class="just-txt body-text row-text row-text-right">Did you know that yard waste, like leaves and
                 trimmings, makes up almost 13% of all landfill waste? In 2020, we asked all our friends and neighbors to
                 donate their leaves to our compost/soil fertility program and thereby help divert it away from the local
                 landfills. We were thrilled by the popularity of this effort and were quickly overwhelmed with
@@ -219,31 +237,12 @@
                 <br><span class="apricots">-
                     thank you, Wichita and Andover!</span><br><br>
                 <!-- use class  fall-leaves or fall-gradient for color -->
-
                 Starting in 2021, we will be launching an annual fall leaf festival. Bring your bagged leaves to the
                 farm and donate them to our effort. We will have food trucks, music, and activities for the kids! Do
                 something good for the earth and something fun for the family!
                 <br></br>
                 Would your family like to join us for our Fall Leaf Festival? Submit your contact information to receive
                 our quarterly
-                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
-                forget to follow us on social media, too!
-            </p>
-        </div>
-    </div>
-
-    <div class="row2 tall_big" id="market">
-
-        <div class="c1"><img src="../img/market.jpg"></div>
-        <div class="c2 centered">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
-                summer pop-up markets
-            </div>
-            <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm have
-                been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
-                pop-up markets from time to time when a crop blesses us with more production than we know what to do
-                with! Our tomato and pesto pop-ups have been extremely popular in previous years.<br></br>
-                Do our Summer Pop-Up Markets sound fun to you? Submit your contact information to receive our quarterly
                 newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
                 forget to follow us on social media, too!
             </p>
