more edits for leah
more edits for leah

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -19,6 +19,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles_events.css?v=1.0">
     <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
+    <link rel="icon" href="/icon.png">
 
 
 </head>
@@ -142,8 +143,9 @@
                 events. Most importantly though, has been the growing program. Firefly Farm has focused on heirloom
                 vegetables, specifically, heirloom tomatoes on which it has built its reputation. We are proud to grow
                 and sell produce that is known for its flavor.
-                <br></br><a href="https://www.tallgrasshempcannabis.com/">
-                    In 2020, Firefly Farm forged a connection with Tallgrass Hemp and Cannabis.</a>
+                <br></br>
+                In 2020, Firefly Farm forged a connection with <a href="https://www.tallgrasshempcannabis.com/"></In>
+                    Tallgrass Hemp and Cannabis.</a>
                 <!-- (Can you put in a link to Sarah’s web site here?)  -->
                 Through our partnership we are excited to contribute to the research and
                 resurgence of hemp, Kansas’ newest and oldest fiber, grain and food crop.
