--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles_index1.css?v=1.0">
     <link rel="stylesheet" href="css/styles_all.css?v=1.0">
+    <link rel="icon" href="/icon.png">
 
 </head>
 
@@ -159,7 +160,9 @@
         <br></br>
         Buy our delicious and healthful produce directly through our new, on-line store to create beautiful meals at
         home when you feel like cooking. When you don’t, turn the kitchen work over to a talented, local chef and buy
-        our delicious and healthful produce already turned into a finished meal! Remember, when you spend money with one
+        our delicious and healthful produce already turned into a finished meal!
+        <br></br>
+        Remember, when you spend money with one
         of our customers, you are buying local two-levels deep!
 
     </div>
