--- a/services.html
+++ b/services.html
@@ -19,6 +19,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles_services.css?v=1.0">
     <link rel="stylesheet" href="css/styles_events.css?v=1.0">
+    <link rel="icon" href="/icon.png">
 
 </head>
 
