Making img resize better
Apply headshot class to images to make them scale with window nicely

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
     <!-- A WORD ABOUT HOW WE GROW AND PHOTO OF LEAH -->
-    <!-- <div class="row1">
+    <div class="row1">
 
         <div class="c2 mt-5 centered" align="center">
             <div class="secthead inside-secthead m-2" align="center">
@@ -191,7 +191,7 @@
         </div>
         <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
 
-    </div> -->
+    </div>
     <div class="vendor_pics_box">
         <div class="vendor_pic_spot"><img src="../img/vendor/public.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/newport.png"></div>
