--- a/events.html
+++ b/events.html
@@ -157,99 +157,151 @@
     </div>
     <!-- end cos media banner -->
 
+    <div class="scrolly">
 
+        <div class="row1 tall_big" id="plantsale">
 
-    <div class="row1 tall_big" id="plantsale">
+            <div class="c2 centered" align="center">
+                <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
+                    spring plant sale
+                </div>
+                <p class="just-txt m-md-5 sscenter">
+                    Transplant some of the goodness of Firefly Farm into your backyard garden during our annual spring
+                    plant
+                    sale typically held close to Earth Day each year. If you like the way our veggies taste, buy our
+                    plants
+                    and grow them at home for yourself! We’ve done extensive research on the varieties we grow, so take
+                    advantage of our hard work! During the plant sale, come to the Firefly propagation house and pick
+                    from
+                    tons of fresh and organically grown tomato plants, other veggies, herbs, and flowers. These healthy
+                    starters will make it easy to entice winged visitors to your pollinator garden or to grow veg for
+                    your
+                    very own farm-to-table dinners.
+                    <br></br>
+                    Does our Spring Plant Sale interest you? Submit your contact information to receive our quarterly
+                    newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And,
+                    don’t
+                    forget to follow us on social media, too!
 
-        <div class="c2 centered" align="center">
-            <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                spring plant sale
+                </p>
             </div>
-            <p class="just-txt body-text row-text row-text-left">
-                Transplant some of the goodness of Firefly Farm into your backyard garden during our annual spring plant
-                sale typically held close to Earth Day each year. If you like the way our veggies taste, buy our plants
-                and grow them at home for yourself! We’ve done extensive research on the varieties we grow, so take
-                advantage of our hard work! During the plant sale, come to the Firefly propagation house and pick from
-                tons of fresh and organically grown tomato plants, other veggies, herbs, and flowers. These healthy
-                starters will make it easy to entice winged visitors to your pollinator garden or to grow veg for your
-                very own farm-to-table dinners.
-                <br></br>
-                Does our Spring Plant Sale interest you? Submit your contact information to receive our quarterly
-                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
-                forget to follow us on social media, too!
-
-            </p>
+            <div class="c3"><img class="headshot" src="../img/plantsalething.jpg"></div>
         </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/plantsalething.jpg"></div>
-    </div>
 
-    <div class="row2 tall_big" id="market">
+        <!-- start word grow -->
 
-        <div class="c1"><img src="../img/market.jpg"></div>
-        <div class="c2 centered">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
-                summer pop-up markets
+        <div class="row1">
+
+            <div class="c2 mt-5 centered" align="center">
+                <div class="secthead inside-secthead m-2" align="center">
+                    a word about how we grow
+                </div>
+                <p class="just-txt m-md-5">
+                    We care a lot about how food tastes, so we scour the market to find the most delicious fruit and
+                    vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock.
+                    We
+                    never use genetically modified organisms. We are dedicated to growing fruits and vegetables in ways
+                    that
+                    don't damage the environment in which they are grown or the people who consume them. Our fertilizers
+                    are
+                    always organic. We avoid using poisons or toxins to control insects, weeds, and disease; when
+                    absolutely
+                    necessary, we only use OMRI-approved products. We believe that food grown locally, seasonally, and
+                    sustainably doesn't just taste better and isn't just more health inducing but is more humane and
+                    socially just, too. We hope you will appreciate the vision we have for our farm and that you will
+                    join
+                    us in making it a reality by purchasing your produce here.
+                </p>
+                <p class="signature">- Leah Dannar-Garcia</p>
+                <p>owner/operator</p>
             </div>
-            <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm have
-                been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
-                pop-up markets from time to time when a crop blesses us with more production than we know what to do
-                with! Our tomato and pesto pop-ups have been extremely popular in previous years.<br></br>
-                Do our Summer Pop-Up Markets sound fun to you? Submit your contact information to receive our quarterly
-                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
-                forget to follow us on social media, too!
-            </p>
-        </div>
-    </div>
+            <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
 
-    <div class="row3 tall_big" id="fttdinner">
-        <div class="c3"><img class="fttpic" src="../img/dinnerbarnrc.jpg"></div>
-        <div class="c1">
-            <div class="secthead inside-secthead inside-secthead-left" align="center">
-                summer farm-to-table dinners
+        </div>
+
+        <!-- end word grow -->
+
+        <div class="row2 tall_big sscenter" id="market">
+
+            <div class="c1"><img class="headshot" src="../img/market.jpg"></div>
+            <div class="c2 centered">
+                <div class="secthead inside-secthead inside-secthead-right" align="center">
+                    summer pop-up markets
+                </div>
+                <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm
+                    have
+                    been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
+                    pop-up markets from time to time when a crop blesses us with more production than we know what to do
+                    with! Our tomato and pesto pop-ups have been extremely popular in previous years.<br></br>
+                    Do our Summer Pop-Up Markets sound fun to you? Submit your contact information to receive our
+                    quarterly
+                    newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And,
+                    don’t
+                    forget to follow us on social media, too!
+                </p>
             </div>
-            <p class="just-txt body-text row-text row-text-left">Farm-to-table dinners have been held here in our barns
-                since 2016 to rave
-                reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
-                local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
-                ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made
-                beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook page to
-                learn about upcoming events.
-                <br></br>
-                Do you want to join us for a Summer Farm-to-Table Dinner? Submit your contact information to receive our
-                quarterly
-                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
-                forget to follow us on social media, too!
-            </p>
         </div>
-    </div>
 
-    <div class="row2 tall_big" id="fallfest">
-
-        <div class="c1"><img src="../img/leaffestrc.jpg"></div>
-        <div class="c2 centered">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
-                fall leaf festival
+        <div class="row3 tall_big" id="fttdinner">
+            <div class="c3"><img class="fttpic headshot" src="../img/dinnerbarnrc.jpg"></div>
+            <div class="c1">
+                <div class="secthead inside-secthead inside-secthead-left" align="center">
+                    summer farm-to-table dinners
+                </div>
+                <p class="just-txt body-text row-text row-text-left">Farm-to-table dinners have been held here in our
+                    barns
+                    since 2016 to rave
+                    reviews. We source fruits and vegetables from our own farm and supplement with ingredients from
+                    other
+                    local farms and food makers. Then we invite local guest chefs to turn these farm-fresh,
+                    locally-sourced
+                    ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of
+                    locally-made
+                    beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook
+                    page to
+                    learn about upcoming events.
+                    <br></br>
+                    Do you want to join us for a Summer Farm-to-Table Dinner? Submit your contact information to receive
+                    our
+                    quarterly
+                    newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And,
+                    don’t
+                    forget to follow us on social media, too!
+                </p>
             </div>
-            <p class="just-txt body-text row-text row-text-right">Did you know that yard waste, like leaves and
-                trimmings, makes up almost 13% of all landfill waste? In 2020, we asked all our friends and neighbors to
-                donate their leaves to our compost/soil fertility program and thereby help divert it away from the local
-                landfills. We were thrilled by the popularity of this effort and were quickly overwhelmed with
-                donations!
-                <br><span class="apricots">-
-                    thank you, Wichita and Andover!</span><br><br>
-                <!-- use class  fall-leaves or fall-gradient for color -->
-                Starting in 2021, we will be launching an annual fall leaf festival. Bring your bagged leaves to the
-                farm and donate them to our effort. We will have food trucks, music, and activities for the kids! Do
-                something good for the earth and something fun for the family!
-                <br></br>
-                Would your family like to join us for our Fall Leaf Festival? Submit your contact information to receive
-                our quarterly
-                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
-                forget to follow us on social media, too!
-            </p>
+        </div>
+
+        <div class="row2 tall_big" id="fallfest">
+
+            <div class="c1"><img class="headshot" src="../img/leaffestrc.jpg"></div>
+            <div class="c2 centered">
+                <div class="secthead inside-secthead inside-secthead-right" align="center">
+                    fall leaf festival
+                </div>
+                <p class="just-txt body-text row-text row-text-right">Did you know that yard waste, like leaves and
+                    trimmings, makes up almost 13% of all landfill waste? In 2020, we asked all our friends and
+                    neighbors to
+                    donate their leaves to our compost/soil fertility program and thereby help divert it away from the
+                    local
+                    landfills. We were thrilled by the popularity of this effort and were quickly overwhelmed with
+                    donations!
+                    <br><span class="apricots">-
+                        thank you, Wichita and Andover!</span><br><br>
+                    <!-- use class  fall-leaves or fall-gradient for color -->
+                    Starting in 2021, we will be launching an annual fall leaf festival. Bring your bagged leaves to the
+                    farm and donate them to our effort. We will have food trucks, music, and activities for the kids! Do
+                    something good for the earth and something fun for the family!
+                    <br></br>
+                    Would your family like to join us for our Fall Leaf Festival? Submit your contact information to
+                    receive
+                    our quarterly
+                    newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And,
+                    don’t
+                    forget to follow us on social media, too!
+                </p>
+            </div>
         </div>
     </div>
-
     <!-- Begin Soc. Media Banner -->
     <!-- <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
