--- a/rise.html
+++ b/rise.html
@@ -124,10 +124,22 @@
 
         <div class="c2 centered" align="center">
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                Rise Farm
+                RISE Farms atop the Fidelity Bank Car Park
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                A new parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open
+                One of the largest roof-top farms in the Midwest, RISE Farms is located in the heart of downtown
+                Wichita, Kansas. RISE Farms consists of a 15,000-square-foot urban farm and a 204-panel solar farm
+                situated on the top floor of <a
+                    href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"></a>Fidelity
+                Bank’s mixed-use RISE Car Park development.</a> Here we grow a variety
+                of produce in a no-waste manner to supply area restaurants with fresh, local ingredients. Additionally,
+                we partner with Fidelity Bank’s Office of Culture & Talent on employee engagement programs.
+                RISE Farms is an urban extension of our sustainable farming mission. In addition to providing local
+                produce, the green-roof farm lessens the urban heat island effect, curbs building energy costs and
+                prevents excess storm water run-off. Coupled with the solar farm, which provides power to the parking
+                structure and ground level retail locations, RISE is truly a beacon of environmental progress.
+                <!--  -->
+                <!-- A new parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open
                 later this year and will be home to one of the largest roof-top farms in the midwest. The top floor of
                 the new building will feature an approximately 15,000 square foot urban farm, a 204-panel solar farm, as
                 well as an event space.<br /> <br />
@@ -138,7 +150,7 @@
                 growing delicious nutritious food right where people eat it!
                 <br /><br />Read more about this initiative from Fidelity Bank <a
                     href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
-                    target="_blank">here</a>.
+                    target="_blank">here</a>. -->
 
             </p>
         </div>
