--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_services.css?v=1.0">
-    <link rel="stylesheet" href="css/styles_events.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_blog.css?v=1.0">
+
     <link rel="icon" href="/icon.png">
 
 </head>
@@ -115,12 +115,12 @@
         </div>
     </div> -->
 
-
+    <h1>Farm Blog</h1>
 
     <div class="row1 tall_big" id="hoop">
         <div class="c2" align="center">
             <div class="secthead inside-secthead inside-secthead-left" align="center">
-                hoop house design & build
+                so much to say about 2020
             </div>
             <p class="just-txt body-text row-text row-text-left">Greetings from Firefly Farm! We have missed seeing
                 friends and neighbors at the farm this year. Hope this note finds you healthy and well.
@@ -149,23 +149,46 @@
 
             </p>
         </div>
-        <div class="c3"><img class="plantsale" src="../img/cattunnelsrc.jpg"></div>
         <div class="c4"></div>
     </div>
 
-    <div class="row2 tall_big" id="consult">
-        <div class="c1"><img src="../img/consultingrc.jpg"></div>
-        <div class="c2">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
-                consulting
+    <div class="row1 tall_big" id="hoop">
+        <div class="c2" align="center">
+            <div class="secthead inside-secthead inside-secthead-left" align="center">
+                so much to say about 2020
             </div>
-            <p class="just-txt body-text row-text row-text-right">Whether you're looking to diversify your produce
-                offering, begin a new u-pick strawberry patch, or build a rooftop farm, let us help you plan, design,
-                price, or implement your vision. For more information on how we can help you begin or streamline your
-                farm processes, fill out the <a href="contactform/formpage.html">contact form </a> and tell us a little
-                about what you’re looking for!</p>
+            <p class="just-txt body-text row-text row-text-left">So in my undergraduate days I studied creative writing,
+                amongst other subjects, but to tell the truth my attempts at poetry were just horrible. I remember one
+                of my professors telling me I just had to put the practice hours in and I would progress, but I never
+                spent the time. I had not found my voice then and had no idea what I really wanted to say about
+                life.<br><br>
+                As sad as it sounds, the advent of computers, email, and social media have given me the opportunity to
+                acquire practice hours and I have seen my skills tighten over the years. I no longer have any desire to
+                write poetry and much prefer the wordier nature of prose though, specifically essay writing.<br><br>
+                Add to that fact, I have really gotten to know myself in the intervening years and my voice feels very
+                authentic now. The former being a prerequisite for the latter in my opinion. Being a farmer has given me
+                a chance to make quiet observations about my vocation, nature, the environment, conservation and the
+                insignificant experiences of daily life I come across from time to time that really turn out to be so
+                significant when given a little consideration. It is a matter of focus that has become clearer with age,
+                and I now feel like I might have something useful to say from time to time.<br><br>
+                So here I was this morning channeling my best Mark Twain as I was sitting in bed writing to a friend
+                about farming when I wrote: "I find there is always the next step in learning and refining and since one
+                round takes a year, you only get a limited number of tries before the deal is over."<br><br>
+                As I re-read what I had just written it dawned on me that farming is just re-writing and editing in a
+                different context and that is why I am so comfortable with the process! The earth is my tablet; the plow
+                is my pen; the plants are my words, and each year's effort is just a re-write and edit of the previous
+                year. What an epiphany!<br><br>
+
+
+                With love,
+
+                Leah
+
+            </p>
         </div>
+        <div class="c4"></div>
     </div>
+
     <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
