--- a/crew.html
+++ b/crew.html
@@ -164,18 +164,14 @@
                 City. Later, she travelled and worked in countries around the world before returning to Wichita in 1998
                 and marrying the boy next door soon after.<span id="dots">...</span><span id="more"
                     style="display: none;">
-                    She will never forget the persimmon groves she saw in Korea,
-                    the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia.
-                    Those
-                    far away experiences had a great impact on her ideas about regional agriculture and cuisine. From
-                    the
-                    types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space,
-                    her
-                    vision is beginning to take shape. In the near future, it includes adding a u-pick operation and
-                    seasonal café. She gets little free time these days, but when she does, she enjoys music and the
-                    visual
-                    arts, hiking and kayaking in SE Kansas, and essay writing.</span><span onclick="myFunction()"
-                    id="myBtn" class="apricots">Read more</span>
+                    She will never forget the persimmon groves she saw in Korea, the lady finger bananas she ate in
+                    Mexico, or the vineyards she toured in the Republic of Georgia. Those far away experiences had a
+                    great impact on her ideas about regional agriculture and cuisine. From the types of crops grown
+                    here, to the farmers’ markets, farm-to-table dinners, and public venue space, her vision is
+                    beginning to take shape. In the near future, it includes adding a u-pick operation and seasonal
+                    café. She gets little free time these days, but when she does, she enjoys music and the visual arts,
+                    hiking and kayaking in SE Kansas, and essay writing.</span><span onclick="myFunction()" id="myBtn"
+                    class="apricots">Read more</span>
             </p>
 
         </div>
