--- a/events.html
+++ b/events.html
@@ -159,38 +159,14 @@
 
 
 
-    <div class="row1 tall_big" id="plantsale">
+    <div class="row1 tall_big" id="market">
 
         <div class="c2 centered" align="center">
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                spring plant sale
-            </div>
-            <p class="just-txt body-text row-text row-text-left">
-                Transplant some of the goodness of Firefly Farm into your backyard garden during our annual spring plant
-                sale typically held close to Earth Day each year. If you like the way our veggies taste, buy our plants
-                and grow them at home for yourself! We’ve done extensive research on the varieties we grow, so take
-                advantage of our hard work! During the plant sale, come to the Firefly propagation house and pick from
-                tons of fresh and organically grown tomato plants, other veggies, herbs, and flowers. These healthy
-                starters will make it easy to entice winged visitors to your pollinator garden or to grow veg for your
-                very own farm-to-table dinners.
-                <br></br>
-                Does our Spring Plant Sale interest you? Submit your contact information to receive our quarterly
-                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
-                forget to follow us on social media, too!
-
-            </p>
-        </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/plantsalething.jpg"></div>
-    </div>
-
-    <div class="row2 tall_big" id="market">
-
-        <div class="c1"><img src="../img/market.jpg"></div>
-        <div class="c2 centered">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
                 summer pop-up markets
             </div>
-            <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm have
+            <p class="just-txt body-text row-text row-text-left">
+                Perhaps our most popular events at Firefly Farm have
                 been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
                 pop-up markets from time to time when a crop blesses us with more production than we know what to do
                 with! Our tomato and pesto pop-ups have been extremely popular in previous years.<br></br>
@@ -199,15 +175,17 @@
                 forget to follow us on social media, too!
             </p>
         </div>
+        <div class="c3"><img class="plantsale sqr" src="../img/market.jpg"></div>
     </div>
 
-    <div class="row3 tall_big" id="fttdinner">
-        <div class="c3"><img class="fttpic" src="../img/dinnerbarnrc.jpg"></div>
-        <div class="c1">
-            <div class="secthead inside-secthead inside-secthead-left" align="center">
+    <div class="row2 tall_big" id="fttdinner">
+
+        <div class="c1"><img src="../img/dinnerbarnrc.jpg"></div>
+        <div class="c2 centered">
+            <div class="secthead inside-secthead inside-secthead-right" align="center">
                 summer farm-to-table dinners
             </div>
-            <p class="just-txt body-text row-text row-text-left">Farm-to-table dinners have been held here in our barns
+            <p class="just-txt body-text row-text row-text-right">Farm-to-table dinners have been held here in our barns
                 since 2016 to rave
                 reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
                 local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
@@ -223,14 +201,13 @@
         </div>
     </div>
 
-    <div class="row2 tall_big" id="fallfest">
-
-        <div class="c1"><img src="../img/leaffestrc.jpg"></div>
-        <div class="c2 centered">
-            <div class="secthead inside-secthead inside-secthead-right" align="center">
+    <div class="row3 tall_big" id="fallfest">
+        <div class="c3"><img class="fttpic" src="../img/leaffestrc.jpg"></div>
+        <div class="c1">
+            <div class="secthead inside-secthead inside-secthead-left" align="center">
                 fall leaf festival
             </div>
-            <p class="just-txt body-text row-text row-text-right">Did you know that yard waste, like leaves and
+            <p class="just-txt body-text row-text row-text-left">Did you know that yard waste, like leaves and
                 trimmings, makes up almost 13% of all landfill waste? In 2020, we asked all our friends and neighbors to
                 donate their leaves to our compost/soil fertility program and thereby help divert it away from the local
                 landfills. We were thrilled by the popularity of this effort and were quickly overwhelmed with
@@ -246,6 +223,30 @@
                 our quarterly
                 newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
                 forget to follow us on social media, too!
+            </p>
+        </div>
+    </div>
+
+    <div class="row2 tall_big" id="plantsale">
+
+        <div class="c1"><img src="../img/plantsalething.jpg"></div>
+        <div class="c2 centered">
+            <div class="secthead inside-secthead inside-secthead-right" align="center">
+                spring plant sale
+            </div>
+            <p class="just-txt body-text row-text row-text-right">Transplant some of the goodness of Firefly Farm into
+                your backyard garden during our annual spring plant
+                sale typically held close to Earth Day each year. If you like the way our veggies taste, buy our plants
+                and grow them at home for yourself! We’ve done extensive research on the varieties we grow, so take
+                advantage of our hard work! During the plant sale, come to the Firefly propagation house and pick from
+                tons of fresh and organically grown tomato plants, other veggies, herbs, and flowers. These healthy
+                starters will make it easy to entice winged visitors to your pollinator garden or to grow veg for your
+                very own farm-to-table dinners.
+                <br></br>
+                Does our Spring Plant Sale interest you? Submit your contact information to receive our quarterly
+                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
+                forget to follow us on social media, too!
+
             </p>
         </div>
     </div>
