--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <p></p>
     </div>
 
-    <div class="top-blurb body-text just-txt"> Firefly Farm launched a wholesale, commercial growing operation in 2015
+    <div class="top-blurb body-text just-txt">Firefly Farm launched a wholesale, commercial growing operation in 2015
         with an extensive offering of heirloom tomatoes and a few other summer crops. Selling to just three restaurants
         that first year, the organically grown produce developed a dedicated following in the Wichita, local food
         community.
@@ -162,8 +162,7 @@
         home when you feel like cooking. When you don’t, turn the kitchen work over to a talented, local chef and buy
         our delicious and healthful produce already turned into a finished meal!
         <br></br>
-        Remember, when you spend money with one
-        of our customers, you are buying local two-levels deep!
+        Remember, when you spend money with one of our customers, you are buying local two-levels deep!
 
     </div>
 
@@ -197,6 +196,8 @@
         <div class="vendor_pic_spot"><img src="../img/vendor/newport.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Siena.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Elderslie.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/violas.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/napoli.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/86 Cold Press.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Beautiful Day.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/dempsys.png"></div>
