--- a/rise.html
+++ b/rise.html
@@ -20,6 +20,22 @@
     <link rel="stylesheet" href="css/styles_events.css?v=1.0">
     <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
     <link rel="icon" href="/icon.png">
+    <style>
+        .logo_div {
+            justify-content: center;
+            justify-items: center;
+            align-content: center;
+            align-items: center;
+        }
+
+        .rise_logo {
+            align-self: center;
+            margin: auto;
+            justify-self: auto;
+            height: 25rem;
+            display: block;
+        }
+    </style>
 
 </head>
 
@@ -130,8 +146,8 @@
                 One of the largest roof-top farms in the Midwest, RISE Farms is located in the heart of downtown
                 Wichita, Kansas. RISE Farms consists of a 15,000-square-foot urban farm and a 204-panel solar farm
                 situated on the top floor of <a
-                    href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"></a>Fidelity
-                Bank’s mixed-use RISE Car Park development.</a> Here we grow a variety
+                    href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/">Fidelity
+                    Bank’s mixed-use RISE Car Park development.</a> Here we grow a variety
                 of produce in a no-waste manner to supply area restaurants with fresh, local ingredients. Additionally,
                 we partner with Fidelity Bank’s Office of Culture & Talent on employee engagement programs.
                 RISE Farms is an urban extension of our sustainable farming mission. In addition to providing local
@@ -155,6 +171,7 @@
             </p>
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/rise-replace.jpg"></div>
+        <div class="logo_div"><img class="rise_logo" src="../img/rise_logo.png"></div>
     </div>
 
 
