finsih july rev
julrev rfins

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -29,8 +29,9 @@
     <!-- onclick="window.location.href='index.html';" -->
 
     <div class="text-center">
-        <img class="site-logo mt-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
-            alt="Firefly Farm logo" class="img-fluid">
+        <a href="index.html">
+            <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
+                alt="Firefly Farm logo" class="img-fluid"></a>
     </div>
     <!-- <div class="nav-bar">
             <p class="strike">&#9</p>
@@ -49,7 +50,7 @@
 
     </div> -->
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
-    <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
+    <nav class="navbar sticky-top navbar-expand-md navbar-light mb-4 bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -57,39 +58,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
+                <!-- <li class="nav-item active">
+                    <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank"
-                        target="_blank">Shop</a>
+                        target="_blank">Shop Local</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">About</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="blog.html">Blog</a>
+                        <a class="dropdown-item" href="crew.html">Crew</a>
+                        <a class="dropdown-item" href="events.html">Events</a>
+                        <a class="dropdown-item" href="services.html">Services</a>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="#!">Firefly</a>
-
-                        <a class="dropdown-item" href="rise.html">Rise</a>
-                        <a class="dropdown-item" href="crew.html">Our Crew</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
-                        <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
-                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
-                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Services</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="services.html#hoop">Hoop Houses</a>
-                        <a class="dropdown-item" href="services.html#consult">Consulting</a>
+                        <a class="dropdown-item" href="#">Firefly Farm</a>
+                        <a class="dropdown-item" href="rise.html">RISE Farms</a>
                     </div>
                 </li>
                 <li class="nav-item">
