--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!-- <div class="main-photo"><img src="../img/mainphoto.jpg"></div> -->
     <!-- onclick="window.location.href='index.html';" -->
 
-    <div class="text-center">
-        <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
-            alt="Firefly Farm logo" class="img-fluid">
+    <div class="text-center"><a href="#">
+            <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
+                alt="Firefly Farm logo" class="img-fluid"></a>
     </div>
     <!-- <div class="nav-bar">
             <p class="strike">&#9</p>
@@ -50,38 +50,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank"
-                        target="_blank">Shop</a>
+                        target="_blank">Shop Local</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">About</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="blog.html">Blog</a>
+                        <a class="dropdown-item" href="crew.html">Crew</a>
+                        <a class="dropdown-item" href="events.html">Events</a>
+                        <a class="dropdown-item" href="services.html">Services</a>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="rise.html">Rise</a>
-                        <a class="dropdown-item" href="crew.html">Our Crew</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
-                        <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
-                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
-                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Services</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="services.html#hoop">Hoop Houses</a>
-                        <a class="dropdown-item" href="services.html#consult">Consulting</a>
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly Farm</a>
+                        <a class="dropdown-item" href="rise.html">RISE Farms</a>
                     </div>
                 </li>
                 <li class="nav-item">
