--- a/index.html
+++ b/index.html
@@ -183,31 +183,50 @@
 
     </div> -->
     <div class="vendor_pics_box">
-        <div class="vendor_pic_spot"><img src="../img/vendor/public.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/newport.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Siena.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Elderslie.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/violas.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/napoli.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/86 Cold Press.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Beautiful Day.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/dempsys.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/felipes.png"></div>
+        <div class="vendor_pic_spot"><a href="https://publicbrickyard.com/oldtownwichitarestaurant/"><img
+                    src="../img/vendor/public.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.newportgrill.com/"><img src="../img/vendor/newport.png"></div>
+        </a>
+        <div class="vendor_pic_spot"><a href="http://www.sienawichita.com/"><img src="../img/vendor/Siena.png"></div>
+        </a>
+        <div class="vendor_pic_spot"><a href="https://eldersliefarm.com/"><img src="../img/vendor/Elderslie.png"></div>
+        </a>
+        <div class="vendor_pic_spot"><a href="https://www.violaspantry.com/"><img src="../img/vendor/violas.png"></div>
+        </a>
+        <div class="vendor_pic_spot"><a href="https://www.napoliwichita.com/"><img src="../img/vendor/napoli.png"></div>
+        </a>
+        <div class="vendor_pic_spot"><a href="http://www.86coldpress.com/"><img src="../img/vendor/86 Cold Press.png">
+        </div></a>
+        <div class="vendor_pic_spot"><a href="https://beautifuldaycafe.com/"><img src="../img/vendor/Beautiful Day.png">
+        </div></a>
+        <div class="vendor_pic_spot"><a href="https://www.dempseysburgerpub.com/"><img src="../img/vendor/dempsys.png">
+        </div></a>
+        <div class="vendor_pic_spot"><a href="https://www.felipeswichita.com/"><img src="../img/vendor/felipes.png">
+        </div></a>
         <!-- <div class="vendor_pic_spot"><img src="../img/vendor/Flying Stove.png"></div> -->
-        <div class="vendor_pic_spot"><img src="../img/vendor/inspiritbrewing.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/LeafStoneApothecary.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/leslie.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Little Lion Cafe.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/lolasbistro.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/noraskitchen.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/orozcos.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Piatto.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/placeholdercoffee.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/serenityfarm.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/signaturesaltsandseasonings.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/twoolives_logo.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/uncommontable.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/vora.png"></div>
+        <div class="vendor_pic_spot"><a href="https://inspiritbrewing.com/"><img
+                    src="../img/vendor/inspiritbrewing.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.landsapothecary.com/home"><img
+                    src="../img/vendor/LeafStoneApothecary.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://lesliecoffee.co/"><img src="../img/vendor/leslie.png"></div></a>
+        <div class="vendor_pic_spot"><a href="#"><img src="../img/vendor/Little Lion Cafe.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://lolas-bistro.com/"><img src="../img/vendor/lolasbistro.png"></div>
+        </a>
+        <div class="vendor_pic_spot"><a href="#"><img src="../img/vendor/noraskitchen.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.facebook.com/Orozcoshotsauce/"><img
+                    src="../img/vendor/orozcos.png"></div></a>
+        <div class="vendor_pic_spot"><a href="http://www.piattoict.com/"><img src="../img/vendor/Piatto.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.placeholdercoffee.com/"><img
+                    src="../img/vendor/placeholdercoffee.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.serenityfarmcsa.com/"><img
+                    src="../img/vendor/serenityfarm.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://signaturesaltsandseasonings.com/"><img
+                    src="../img/vendor/signaturesaltsandseasonings.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://twooliveswichita.com/"><img
+                    src="../img/vendor/twoolives_logo.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.facebook.com/TheUncommonTable/"><img
+                    src="../img/vendor/uncommontable.png"></div></a>
+        <div class="vendor_pic_spot"><a href="https://www.vorawichita.com/"><img src="../img/vendor/vora.png"></div></a>
         <!-- <div class="vendor_pic_spot"><img src="../img/vendor/wichitalocaleats.png"></div> -->
     </div>
     <!-- <div class="row2">
